# lumo

./: .gitignore  Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yaml  docker-compose.yml  go.mod  go.sum
go/internal/app/link/: app.go  types.go
go/internal/app/lume/: app.go  types.go
go/internal/app/lumo/: app.go
go/internal/cmd/: main.go
go/internal/models/link/: link.go  utils.go
go/internal/models/lume/: lume.go  utils.go
go/internal/models/lumo/: lumo.go  utils.go
go/internal/repository/db/: config.go  sqlc.yaml
go/internal/repository/link/: .mockery.yml  repository.go  repository_test.go
go/internal/repository/lume/: .mockery.yaml  repository.go  repository_test.go
go/internal/repository/lumo/: repository.go
go/internal/service/link/: service.go  utils.go
go/internal/service/lume/: service.go  utils.go  validation.go
go/internal/service/lumo/: service.go
js/web/: .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json
js/web/public/: index.html
js/web/src/: App.css  App.tsx
protobuf/link/: link.proto  service.proto
protobuf/link/v1/: link.proto  service.proto
protobuf/lume/: lume.proto  service.proto
protobuf/lume/v1/: lume.proto  service.proto
protobuf/lumo/: lumo.proto  service.proto
protobuf/lumo/v1/: lumo.proto  service.proto
rs/: Cargo.toml  RUST_MIGRATION_GUIDE.md  docker-compose.yml  sqlx_repository_example.md
rs/.cargo/: config.toml
rs/migrations/: 20250620075508_create_labels_table.sql
rs/src/: main.rs
rs/src/label/: model.rs  repository.rs
(+28 files in other folders)
