[package]
name = "rs"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "macros", "migrate", "uuid", "time"] }
tokio = { version = "1", features = ["full"] }

# Env files
dotenvy = "0.15"

# UUID
uuid = { version = "1.17.0", features = ["v4", "serde"]}
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.41", features = ["serde"]}

# Validator
validator = { version = "0.20.0", features = ["derive"] }